[gd_scene load_steps=7 format=2]

[ext_resource path="res://parallax-space-backgound.png" type="Texture" id=1]
[ext_resource path="res://light.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Star.gd" type="Script" id=4]
[ext_resource path="res://Orb.tscn" type="PackedScene" id=6]
[ext_resource path="res://MassBody.tscn" type="PackedScene" id=9]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 1445.96, 482.0 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 32, 32 )

[node name="Space" type="Sprite" parent="Camera2D"]
self_modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( 251.714, 967.649 )
scale = Vector2( 250, 250 )
texture = ExtResource( 1 )

[node name="Orb" parent="." instance=ExtResource( 6 )]
orbitalVelocity = Vector2( 50, 50 )

[node name="Star" type="Node2D" parent="." groups=["massive"]]
position = Vector2( -479, 131 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Star"]
modulate = Color( 1, 1, 1, 0.239216 )
position = Vector2( 8, 6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="Star"]
position = Vector2( 8, 6 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
texture_scale = 5.35
energy = 1.65
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.992157 )

[node name="MassBody" parent="Star" groups=["massive-single-test"] instance=ExtResource( 9 )]
position = Vector2( 1132, -1320 )
self_mass = 10000.0
orbitalVelocity = Vector2( 30, 30 )

[node name="MassBody2" parent="Star" instance=ExtResource( 9 )]
position = Vector2( 0, -12173 )
self_mass = 10000.0
orbitalVelocity = Vector2( 14, 0 )

[node name="MassBody2-1" parent="Star/MassBody2" instance=ExtResource( 9 )]
position = Vector2( 0, -1413 )
self_mass = 5000.0
orbitalVelocity = Vector2( 25, 0 )

[node name="MassBody2-1-1" parent="Star/MassBody2/MassBody2-1" instance=ExtResource( 9 )]
position = Vector2( 0, -186 )
self_mass = 500.0
orbitalVelocity = Vector2( 39, 0 )

[node name="MassBody2-2" parent="Star/MassBody2" instance=ExtResource( 9 )]
position = Vector2( 547, 0 )
self_mass = 1000.0
orbitalVelocity = Vector2( 0, 28 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="labelTotalDelta" type="Label" parent="CanvasLayer"]
margin_left = 75.0
margin_top = 24.0
margin_right = 1674.0
margin_bottom = 38.0
text = "TotalDelta"

[node name="labelTimeScale" type="Label" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 24.0
margin_right = 1600.0
margin_bottom = 38.0
text = "TimeScale"

[node name="HSlider" type="HSlider" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 8.0
margin_right = 1600.0
margin_bottom = 24.0
max_value = 32.0
step = 0.25
value = 1.0
tick_count = 33
ticks_on_borders = true

[node name="VSlider" type="VSlider" parent="CanvasLayer"]
margin_left = 113.0
margin_top = 55.0
margin_right = 202.0
margin_bottom = 810.0
min_value = 1.0
max_value = 50.0
value = 18.0

[node name="LogPanel" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.686275 )
margin_left = 1296.0
margin_top = 44.0
margin_right = 1588.0
margin_bottom = 733.0

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/LogPanel"]
margin_right = 289.0
margin_bottom = 689.0
tab_align = 0
tabs_visible = false

[node name="star" type="Label" parent="CanvasLayer/LogPanel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
text = "star"

[node name="ObjectsPanel" type="Panel" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 52.0
margin_right = 145.0
margin_bottom = 812.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ObjectsPanel"]
margin_top = 6.0
margin_right = 135.0
margin_bottom = 755.0
custom_constants/separation = -3

[node name="Button" type="Button" parent="CanvasLayer/ObjectsPanel/VBoxContainer"]
margin_right = 135.0
margin_bottom = 20.0
custom_colors/font_color_focus = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.945098, 1, 0, 1 )
text = "star"
flat = true
align = 0

[connection signal="draw" from="." to="." method="_on_Game_draw"]
[connection signal="value_changed" from="CanvasLayer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="tab_changed" from="CanvasLayer/LogPanel/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="CanvasLayer/ObjectsPanel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
